FIX: removed drop shadow that caused unwanted horizontal scroll of the main content.

--- a/resources/assets/scss/theme.scss
+++ b/resources/assets/scss/theme.scss
@@ -29,7 +29,7 @@ body {
   position: fixed !important;
   top: 0;
   bottom: 0;
-  overflow: visible; //FIX para nav sm 
+  overflow: visible; //FIX para nav sm
 }
 
 .nav-sm ul.nav.child_menu li a{
@@ -71,17 +71,6 @@ body {
   //background: $overflow-color;
   position: relative;
   z-index: 1;
-  // The dropshadow on a floating div is more performant and draws a shadow only on the right side of the container.
-  &:before {
-    content: '';
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 1279px;
-    width: 1px;
-    box-shadow: 0 0 7px rgba(0,0,0,.5);
-    z-index: -1;
-  }
   li.top_nav {
     margin-left: 0;
   }
